# my-site

./: README.md
backend/: README.md  pyproject.toml
backend/src/: constants.py
backend/src/backend/: run.py
backend/src/backend/blueprints/: cv.py  health_check.py
backend/src/backend/lib/: api_error.py
backend/tests/blueprints/: test_cv.py  test_health_check.py
frontend/: index.html  jest.config.ts  package-lock.json  package.json
frontend/src/: App.tsx  App.types.ts
frontend/src/assets/: Hello.styles.ts  Hello.tsx  Intro.styles.ts  Intro.tsx  Languages.styles.ts  Languages.tsx
frontend/src/assets/intro-section/: CV.styles.ts  CV.tsx  Hello.styles.ts  Hello.tsx  Information.styles.ts  Information.tsx  Intro.styles.ts  Intro.tsx  Languages.styles.ts  Languages.tsx
frontend/src/pages/home/: Home.styles.ts  Home.tsx
frontend/src/utils/: theme.ts  utils.spec.ts  utils.ts
